--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,18 @@
 
 
     <body> 
-        <h1> Aquí vamos a hacer un blog post</h1>
+        <div id="container">
+
+        <div id="post">
+
+        <h1> Este es el titulo atractivo e interesante del post</h1>
     
-    <p>Este es el parrafo de inicio</p>
+    <p>Y este es el parrafo de inicio donde vamos a explicar las cosas 
+        increibles que se pueden hacer con rama</p>
+
+        </div>
+        </div>
+
     </body>
 </head>
 </html>
