--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,10 @@
     <body> 
         <div id="container">
             <div id="cabecera">
-                cabecera
+                Hiperblog
+                <span id="tagline">
+                    Tu blog de confianza
+                </span>
             </div>
 
         <div id="post">
