--- a/blogpost.html
+++ b/blogpost.html
@@ -7,9 +7,30 @@
 
 
     <body> 
-        <h1> Aquí vamos a hacer un blog post</h1>
+        <div id="container">
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">
+                    Tu blog de confianza
+                </span>
+            </div>
+
+        <div id="post">
+
+        <h1> Este es el titulo atractivo e interesante del post</h1>
     
-    <p>Este es el parrafo de inicio</p>
+    <p>Y este es el parrafo de inicio donde vamos a explicar las cosas 
+        increibles que se pueden hacer con rama</p>
+        <p> 
+            Los blogs son la mejor forma de compartir información y tus ideas. Mucho más
+            que ir a conferencias o salir en you tube. Excepto si eres Rockstar.
+            Pero estadisticamente no lo eres.......por ahora
+            
+        </p>
+
+        </div>
+        </div>
+
     </body>
 </head>
 </html>
