--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,7 @@
 
         <h1> Este es el titulo atractivo e interesante del post</h1>
     
-    <p>Y este es el parrafo de inicio donde vamos a explicar las cosas 
+    <p>Y este es el párrafo de inicio donde vamos a explicar las cosas 
         increibles que se pueden hacer con rama</p>
         <p> 
             Los blogs son la mejor forma de compartir información y tus ideas. Mucho más
